# ez_api_skeleton

./: .gitignore  .gitmodules  .merlin  Makefile  README.md  build.common  build.ocp2  configure  dune  dune-project  dune-workspace  ocp-autoconf.config  skeleton.opam
libs/: dune
scripts/: api.service  api.sh
src/: dune
src/api/: api.ml  api_server.ml  build.ocp2  doc.ml  dune  encoding.ml  handlers.ml  openapi.ml  services.ml
src/api/doc/: dune  dune~  openapi.ml~
src/common/: build.ocp2  data_types.ml  dune  misc.ml  utils.ml
src/db/: build.ocp2  db.ml  db_lwt.ml  db_updater.ml  dbr.ml  dune  misc_db.ml  monad_lwt.ml  versions.ml
src/db/db-update/: dune
src/ui/: api_request.ml  build.ocp2  common.ml  dispatch.ml  dune  main.ml  main_ui.ml  misc_js.ml  request.ml  route.ml  v.ml  vdata.ml  www_request.ml
static/: index.html  info.json
static/css/: bootstrap-vue.min.css  bootstrap.min.css
static/js/: bootstrap-vue-icons.min.js  bootstrap-vue.min.js
